traefik-crds/ingressroute-adguard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-adguard
  namespace: adguard
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`adguard.balssh.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: traefik
        - name: forward-auth
          namespace: traefik
      services:
        - name: adguard
          port: 80
