traefik-crds/ingressroute-glance.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-glance
  namespace: glance
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`glance.balssh.com`)
      kind: Rule
      # middlewares:
      #   - name: redirect-https
      #     namespace: traefik
      services:
        - name: glance
          port: 8080
